# advanced-data-science-2023

./: pyproject.toml
.devcontainer/: devcontainer.json
bible-nlp/: bible-nlp.html  bible-nlp.ipynb
bible-nlp/data/: classification_verses.csv  clustering_verses.csv  summarizing_verses.csv  verses.csv
bible-nlp/data/verses/: childhood.csv  conclusion-account-before-passion.csv  final-ministry-in-jerusalem.csv  jesus-feast-tabernacles.csv  john-jesus-beginning.csv  last-journey-to-jerusalem.csv  ministry-in-galilee.csv  ministry-in-judea.csv  olivet-discourse.csv  passion.csv  preparation.csv  resurrection.csv  sermon-of-the-mount.csv  sermon-of-the-plain.csv  the-way-to-cross.csv
internet-industry-partnerships/: CompanyName.txt  internet-industry.partnership.html  internet-industry.partnership.ipynb
nlp_examples/: Lesson 1.ipynb  Lesson 2 - Sentiment Analysis.ipynb  Lesson 3 - Clustering.ipynb  Lesson 4 - Summarization.ipynb  Lesson 5-6 - LDA.ipynb  Lesson 7 - Translation.ipynb  Networkx_tests.ipynb  Text.txt
